proyecto/Kubernetes/api.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
  namespace: proyecto1-so1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: luisbarrera23/api
        imagePullPolicy: Always
        name: apifront
        ports:
          - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: api
  name: api
  namespace: proyecto1-so1
spec:
  selector:
    app: api
  ports:
  - name: api-port
    port: 8080
    targetPort: 8080
  type: LoadBalancer
