proyecto/Kubernetes/redisdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rediscontenedor
  name: rediscontenedor
  namespace: proyecto1-so1
spec:
  selector:
    matchLabels:
      app: rediscontenedor
  replicas: 1
  template:
    metadata:
      labels:
        app: rediscontenedor
    spec:
      containers:
      - name: rediscontenedor
        image: redis:alpine
        ports:
        - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: rediscontenedor
  name: rediscontenedor
  namespace: proyecto1-so1
spec:
  selector:
    app: rediscontenedor
  ports:
  - name: redisdb
    port: 6379
    targetPort: 6379
  type: LoadBalancer
