proyecto/Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fanout-ingress
  namespace: proyecto1-so1
spec:
  rules:
  - http:
      paths:
      - path: /redis
        pathType: Exact
        backend:
          service:
            name: redis
            port:
              number: 8082
      - path: /redis/agregarCaso
        pathType: Prefix
        backend:
          service:
            name: redis
            port:
              number: 8082


      - path: /
        pathType: Exact
        backend:
          service:
            name: grpc
            port:
              number: 7070
      - path: /grpc/agregarCaso
        pathType: Prefix
        backend:
          service:
            name: grpc
            port:
              number: 7070
